fix(web): apply missing font-weight to article title on mobile (#1041)
- resolved: #1041

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -280,8 +280,10 @@ main {
 }
 
 .article-title {
+  font-weight: var(--fw-600);
   position: relative;
   padding-bottom: 7px;
+  margin-bottom: 30px;
 }
 
 .article-title::after {
@@ -294,9 +296,6 @@ main {
   background: var(--text-gradient-yellow);
   border-radius: 3px;
 }
-
-.about .article-title { margin-bottom: 15px; }
-
 
 /*-----------------------------------*\
   #SIDEBAR
@@ -365,9 +364,6 @@ main {
 /*-----------------------------------*\
   #RESUME
 \*-----------------------------------*/
-
-.article-title { margin-bottom: 30px; }
-
 
 .timeline {
   margin-bottom: 30px;
@@ -1043,7 +1039,8 @@ textarea.form-input::-webkit-resizer {
     --fs-6: 16px;
     padding: 16px 20px;
   }
-.article-title {
+
+  .article-title {
     font-weight: var(--fw-600);
     padding-bottom: 15px;
   }
@@ -1052,8 +1049,6 @@ textarea.form-input::-webkit-resizer {
     width: 40px;
     height: 5px;
   }
-    .about .article-title { margin-bottom: 20px; }
-
 }
 
 /**
@@ -1150,8 +1145,8 @@ textarea.form-input::-webkit-resizer {
   }
 
   .article-title {
-     padding-bottom: 20px;
-   }
+    padding-bottom: 20px;
+  }
 }
 
 /**
